Fix centering of #about img on small screens.

--- a/style.css
+++ b/style.css
@@ -730,9 +730,11 @@ h4,
   }
 
   #about .content img {
+    float: none;
+    display: block;
     width: 70%;
     height: auto;
-    margin: 0 15vw 1rem;
+    margin: 0 auto 1rem;
   }
 
   #about-text {
